Fixed manage admin layout bugs

--- a/app/static/css/adminManagement.css
+++ b/app/static/css/adminManagement.css
@@ -1,6 +1,6 @@
-h1, label{
+/* h1, label{
   text-align: center;
-}
+} */
 
 select {
   position: relative;
